--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -59,7 +59,5 @@
 }
 
 .user-reviews {
-  background-color: #fff;
-
   flex: 1; // Grow
 }
